<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:textSize="30dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:text="@string/app_name"></TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="30dp"
        android:layout_marginTop="-30dp">

        <TextView
            android:id="@+id/text_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/weight"
            android:textColor="@color/black"
            android:textSize="20sp"></TextView>

        <EditText
            android:id="@+id/edit_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/weight_text"
            android:inputType="number" />

        <TextView
            android:id="@+id/text_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/height"
            android:textColor="@color/black"
            android:textSize="20sp">
        </TextView>

        <EditText
            android:id="@+id/edit_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/height_text"
            android:inputType="number"/>

        <RadioGroup
            android:id="@+id/RadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/adult_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"
                android:padding="20dp"
                android:text="@string/radiobutton_adult"
                android:textSize="18sp"
                android:checked="false"/>

            <RadioButton
                android:id="@+id/teen_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="2dp"
                android:padding="20dp"
                android:text="@string/radiobutton_teen"
                android:textSize="18sp"
                android:checked="false"/>
        </RadioGroup>

        <Button
            android:id="@+id/calculate_bmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:onClick="buttonsHandler"
            android:padding="15dp"
            android:text="@string/calculate"
            android:textSize="18sp"></Button>

        <TextView
            android:id="@+id/result_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="30dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"></TextView>


    </LinearLayout>



</LinearLayout>